compiler/e2e/test/snapshot/ir/expression/method_call/receiver_precedence_2/snapshot.snap
---
source: compiler/e2e/test/snapshot/mod.rs
expression: clean_run
---
stderr:
error: mismatched types: expected `&T`, found `T`
   ╭─ compiler/e2e/test/snapshot/ir/expression/method_call/receiver_precedence_2/main.pnx:22:16
   │
22 │     expect[&T](value.realClone()) # will error
   │                ^^^^^^^^^^^^^^^^^ expected `&T`, found `T`
   │
   = ensure the expression type matches the expected type

error: mismatched types: expected `&mut T`, found `T`
   ╭─ compiler/e2e/test/snapshot/ir/expression/method_call/receiver_precedence_2/main.pnx:30:20
   │
30 │     expect[&mut T](value.realClone()) # will error
   │                    ^^^^^^^^^^^^^^^^^ expected `&mut T`, found `T`
   │
   = ensure the expression type matches the expected type

error: mismatched types: expected `T`, found `&T`
   ╭─ compiler/e2e/test/snapshot/ir/expression/method_call/receiver_precedence_2/main.pnx:47:15
   │
47 │     expect[T](value.fakeClone())   # will error
   │               ^^^^^^^^^^^^^^^^^ expected `T`, found `&T`
   │
   = ensure the expression type matches the expected type

error: mismatched types: expected `T`, found `&mut T`
   ╭─ compiler/e2e/test/snapshot/ir/expression/method_call/receiver_precedence_2/main.pnx:54:15
   │
54 │     expect[T](value.fakeClone())  # should resolve to FakeClone[&mut T]::Clone
   │               ^^^^^^^^^^^^^^^^^ expected `T`, found `&mut T`
   │
   = ensure the expression type matches the expected type

error: Compilation aborted due to 4 error(s)



stdout:
